new file:   Screenshot/screenshot.png 	new file:   Screenshot/screenshot.txt 	modified:   src/main/java/com/pinuspintar/be/scheduler/GenerateTokenJob.java 	deleted:    src/main/java/com/pinuspintar/be/scheduler/OCR.java 	modified:   src/main/java/com/pinuspintar/be/util/ADBOperations.java 	new file:   src/main/java/com/pinuspintar/be/util/OCR.java 	modified:   src/main/java/com/pinuspintar/be/util/ScreenshotTaker.java 	modified:   src/main/java/com/pinuspintar/be/util/TokenRequestService.java